fixed display overflow by rounding and added minor styling

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 .display, 
 .buttons {
-    border: 2px dashed black;
+    /* border: 2px dashed black; */
     border-radius: 3px;
 }
 
@@ -35,7 +35,7 @@ body {
     flex: 3 1 0;
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
+    row-gap: 14px;
     padding: 10px;
 }
 
@@ -51,6 +51,12 @@ body {
 }
 .buttons button {
     flex: 1 1 0;
+    box-shadow: 0 9px #999;
+}
+
+.buttons button:active {
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
 }
 
 .display, 
@@ -58,4 +64,12 @@ body {
     font-size: 20px;
     font-family: 'Lucida Console', 'Monaco', monospace;
     padding: 10px;
+}
+
+.operator.equal {
+    background-color: rgb(143, 235, 143);
+}
+
+.clear{
+    background-color: rgb(248, 156, 156);
 }
